# PromptSec

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/analyzer/: entropy.py  gradient.py  hooks.py  influence.py  visualizer.py
app/api/: schemas.py
app/api/routes/: analyze.py  detect.py  redteam.py
app/core/: config.py  logging.py  security.py
app/detector/: heuristic.py  llm_classifier.py  rule_engine.py  scorer.py
app/models/: loader.py  wrapper.py
app/redteam/: evaluator.py  generator.py  mutator.py  search.py
app/storage/: postgres_db.py  redis_cache.py  vector_db.py
app/utils/: metrics.py  tokenizer.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisPanel.tsx  DetectionPanel.tsx  Heatmap.tsx  RedTeamPanel.tsx
tests/unit/: test_analyzer.py  test_api.py  test_detector.py  test_redteam.py
